refactor to bundle `swagger` and `frontend`
